# tds-utils

./: .gitignore  .mcp.json  AGENT.md  CLAI.DESIGN.md  CLAUDE.md  README.tds  SEMANTIC-SEARCH.DESIGN.md  TODO_PLAN.md  texmf.cnf
.github/: copilot-instructions.md  pull_request_template.md
bash/: dot.bashrc  dot.prompts
bookmark-organizer/: README.md  pyproject.toml  taxonomy.example.yml
bookmark-organizer/src/orgmarks/adapters/: chrome_json.py  claude_cli.py  fake_classifier.py  netscape.py  taxonomy_yaml.py
bookmark-organizer/src/orgmarks/app/: cli.py  pipeline.py  report.py
bookmark-organizer/src/orgmarks/domain/: errors.py  model.py  normalizer.py  planner.py  rules.py  shape.py  taxonomy.py
bookmark-organizer/src/orgmarks/ports/: classifier.py  sink.py  source.py
bookmark-organizer/tests/fixtures/: Bookmarks.json  nested.html  simple.html
bookmark-organizer/tests/unit/: test_chrome_json.py  test_claude_cli.py  test_cli.py  test_fake_classifier.py  test_idempotency.py  test_model.py  test_netscape.py  test_normalizer.py  test_pipeline.py  test_planner.py  test_report.py  test_rules.py  test_shape.py  test_taxonomy_yaml.py
clai.d/: mcp.json
docs/: TODO_PLAN.lmde-ingress.md  branch-guard.md  clone-audit.md
emacs/: .gitignore  dot.emacs
gadmin/: gadmin
git-aliases/: checkout.git-alias  test.git-alias
git-config/: dot.gitconfig  dot.gitignore_global
git-hooks/: README.md  post-checkout  pre-push
goldfish/: _blacklist_toggle.py  config.json  conftest.py  core.py  goldfish  pyproject.toml  shell.py  test_core.py
lmde/: LMDE.md  (+1 more)
(+479 files in other folders)
