[project]
name = "orgmarks"
version = "0.1.0"
description = "Groom a Chrome bookmark export around task intent: rules first, LLM second."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "structlog>=24.1",
    "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "factory-boy>=3.3",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"

# ruamel.yaml and factory_boy ship no type information.
[[tool.mypy.overrides]]
module = ["ruamel.*", "factory.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
