[project]
name = "goldfish"
version = "0.1.0"
requires-python = ">=3.11"
# Runtime is pure stdlib; goldfish shells out to CLI tools (gh, git, ps,
# lsof, fzf) rather than importing third-party Python packages, so there
# are no runtime `dependencies`.

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["."]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
